--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pizzeria</title>
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext"
+    rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="vendor/range-slider.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
   <header class="header">
@@ -21,6 +26,7 @@
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
+          <a href="#home">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
@@ -62,9 +68,139 @@
   </header>
 
   <div id="pages">
+    <section id="home">
+      <div class="home-wrapper-container">
+        <div class="home-navigation">
+          <a href="http://localhost:3000/#/order" target="self">
+            <div class="order">
+              <h2>ORDER ONLINE</h2>
+              <p class="text-display">
+                Delicious food delivery to your door
+              </p>
+            </div>
+          </a>
+          <a href="http://localhost:3000/#/booking" target="self">
+            <div class="booking">
+              <h2>BOOK A TABLE</h2>
+              <p class="text-display">
+                Choose a perfect place!
+              </p>
+            </div>
+          </a>
+          <div class="opening-hours">
+            <h2>OPENING HOURS:</h2>
+            <p>TUE-SUN, 12PM - 12AM</p>
+          </div>
+        </div>
+
+        <div class="comments-wrapper">
+          <div id="carouselExampleIndicator" class="carousel slide" data-ride="carousel" data-interval="3000">
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <div class="item-content">
+                  <div class="item-content-image">
+                    <img src="./images/assets/pizza-3.jpg" alt="First review">
+                  </div>
+                  <div class="item-content-description">
+                    <h2>Amazing service!</h2>
+                    <p>My favourite place to eat! Highly recommended! If you want to eat a good traditional Italian pizza, you should come
+                      here and try it! You won't regret it!
+                    </p>
+                    <p>-  <i>Margaret Richardson</i></p>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="item-content">
+                  <div class="item-content-image">
+                    <img src="./images/assets/pizza-3.jpg" alt="Second review">
+                  </div>
+                  <div class="item-content-description">
+                    <h2>Love eating there!</h2>
+                    <p>The best place to eat in the whole town! If you come here at least once, you won't go anywhere else! I promise!
+                    </p>
+                    <p>-  <i>Kim TJ</i></p>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="item-content">
+                  <div class="item-content-image">
+                    <img src="./images/assets/pizza-3.jpg" alt="Third review">
+                  </div>
+                  <div class="item-content-description">
+                    <h2>The best for family!</h2>
+                    <p>I love Italian restaurants of all kinds, but this one is probably the best of them all.
+                      Perfect place for family meetings or even small celebrations. Go and check it out!
+                    </p>
+                    <p>-  <i>Thomas Richmond</i></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="home-gallery">
+          <div class="img-1 image">
+                  <img src="images/pizza-4.jpg" alt="pizza-4">
+                  <div class="icon">
+                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-share-alt"></i>
+                  </div>
+          </div>
+          <div class="img-2 image">
+                  <img src="images/pizza-5.jpg" alt="pizza-5">
+                  <div class="icon">
+                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-share-alt"></i>
+                  </div>
+          </div>
+          <div class="img-3 image">
+                  <img src="images/pizza-6.jpg" alt="pizza-6">
+                  <div class="icon">
+                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-share-alt"></i>
+                  </div>
+          </div>
+          <div class="img-4 image">
+                  <img src="images/pizza-7.jpg" alt="pizza-7">
+                  <div class="icon">
+                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-share-alt"></i>
+                  </div>
+          </div>
+          <div class="img-5 image">
+                  <img src="images/pizza-8.jpg" alt="pizza-8">
+                  <div class="icon">
+                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-share-alt"></i>
+                  </div>
+          </div>
+          <div class="img-6 image">
+                  <img src="images/pizza-9.jpg" alt="pizza-9">
+                  <div class="icon">
+                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-share-alt"></i>
+                  </div>
+          </div>
+        </div>
+
+        <div class="home-footer">
+          <a href="#footer" class="footer">View more on Instagram</a>
+        </div>
+      </div>
+    </section>
+
     <section id="order">
       <div id="product-list" class="product-list container"></div>
     </section>
+
     <section id="booking">
       <div class="booking-wrapper container"></div>
     </section>
@@ -244,8 +380,15 @@
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"
+    integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+    integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="vendor/range-slider.min.js"></script>
   <script src="js/app.js" type="module"></script>
 </body>
+
 </html>
