--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,6 @@
                   </div>
           </div>
         </div>
-
         <div class="home-footer">
           <a href="#footer" class="footer">View more on Instagram</a>
         </div>
@@ -218,7 +217,8 @@
           <div class="hour-picker range-slider">
               <div class="output"></div>
               <label class="booking-option-title">Pick a time</label>
-            <input type="range" name="hour" value="12" min="12" max="24" step="0.5">
+              <input type="range" name="hour" value="12" min="12" max="24" step="0.5">
+              <div class="availability"></div>
           </div>
         </div>
         <div class="floor-plan">
